# PriorityQueueVsHeapQ

./: .gitignore  CMakeLists.txt  main.c  numeros.txt  test.c  testepqueue.c
inc/: Heap.h  PriorityQueue.h
src/: Heap.c  PriorityQueue.c
